* Fixes #1454: dates on history template aren't truncated  * Added filter box to history template  * Adjusted filterbox CSS
git-svn-id: http://dev.zenoss.com/svnint/trunk/core@18825 f5df01ce-0320-0410-9ed9-ddcd13c732cc

--- a/Products/ZenWidgets/skins/zenui/css/filterbox.css
+++ b/Products/ZenWidgets/skins/zenui/css/filterbox.css
@@ -5,7 +5,7 @@
     position: absolute;
     z-index: 2000;
     width: 126px;
-    top: 2px;
+    top: 1px;
     padding-top: 4px;
     right: 60px;
 }
